<resources>
    <string name="app_name">e-MarCo</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="welcome_you_are_in_market">\'Welcome, you are in Market.\'</string>
    <string name="shop_details">Shop details:</string>
    <string name="log_out">log out</string>
    <string name="phone_no">Phone no. :</string>
    <string name="owner">Owner :</string>
    <string name="address">Address :</string>
    <string name="opening_time">Opening time :</string>
    <string name="closing_time">Closing time: :</string>
    <string name="shopkeeper_name">shopkeeper name</string>
    <string name="shop_nameee">shop name</string>
    <string name="shop_addresss">shop address</string>
    <string name="register">register</string>
    <string name="shop_address">shop address</string>
    <string name="shop_name">shop name</string>
    <string name="shop_detailss">Shop details :</string>
    <string name="owner_name">owner name</string>
    <string name="opening_timee">opening time</string>
    <string name="numberr">number</string>
    <string name="closing_timee">closing time</string>
    <string name="closing_timme">closing time</string>
    <string name="opening_timme">Opening time</string>
    <string name="phone_noo">Phone no.</string>
    <string name="full_name">full name</string>
    <string name="email">email</string>
    <string name="aadhar_no">Aadhar No.</string>
    <string name="passwordd">password</string>
    <string name="contact_no">contact no.</string>
    <string name="next">next</string>
    <string name="password">password</string>
    <string name="emailll">email</string>
    <string name="toddo">TODO</string>
    <string name="upassword">Password</string>
    <string name="todoo">TODO</string>
    <string name="todo">TODO</string>
</resources>
